# LeverageBot

./: .env.example  .gitignore  .mcp.json  AUDIT_REPORT.md  BSC_Leverage_Bot_Implementation_Plan.md  CANDLESTICK_PATTERN_ANALYSIS.md  Cargo.toml  DYNAMIC_POSITION_SIZING.md  DYNAMIC_POSITION_SIZING_INTEGRATION.md  IMPLEMENTATION_SUMMARY.md  Liquidation_Strategy.md  MCP_SETUP_SUMMARY.md  ML_COMPREHENSIVE_FINAL_SUMMARY.md  ML_COMPREHENSIVE_PROGRESS.md  ML_FINAL_RESULTS.md  ML_HARDWARE_ASSESSMENT.md  ML_IMPLEMENTATION_GUIDE.md  ML_INFRASTRUCTURE_INVESTIGATION.md  ML_OPTIMIZATION_COMPLETE.md  ML_PHASE_1_COMPLETE.md  ML_PHASE_1_IMPLEMENTATION_PLAN.md  ML_PHASE_1_SETUP_SUMMARY.md  ML_PHASE_2_IMPLEMENTATION_PLAN.md  ML_PHASE_2_PROGRESS.md  ML_PHASE_2_READY_TO_TRAIN.md  ML_PHASE_2_RESEARCH_SUMMARY.md  ML_TRAINING_RESULTS.md  Mempool_Enhancement_Plan.md  PAPER_TRADING_SETUP.md  PROJECT_SUMMARY.md  PURE_KELLY_REFINEMENTS.md  QUICK_START.md  Rust_Rebuild_Plan.md  TRADING_FREQUENCY.md  main.py  pyproject.toml
bot_logging/: __init__.py  logger_manager.py
config/: aave.json  aggregator.json  app.json  loader.py  mempool.json  positions.json  rate_limits.json  redis_channels.json  signals.json  timing.json  validate.py  websocket.json
config/abis/: aave_v3_data_provider.json  aave_v3_oracle.json  aave_v3_pool.json  chainlink_aggregator_v3.json  erc20.json  leverage_executor.json  multicall3.json
config/chains/: 56.json
contracts/: foundry.toml
contracts/src/: LeverageExecutor.sol
contracts/test/: LeverageExecutor.t.sol
core/: __init__.py  data_service.py  health_monitor.py  indicators.py  pnl_tracker.py  position_manager.py  safety.py  signal_engine.py  strategy.py
crates/bot/: Cargo.toml
crates/bot/src/: constants.rs  errors.rs  lib.rs  logging.rs  main.rs  ml_client.rs
crates/bot/src/config/: mod.rs  types.rs  validate.rs
crates/bot/src/core/: data_service.rs  health_monitor.rs  indicators.rs  mod.rs  mtf_data_aggregator.rs  mtf_signal_engine.rs  paper_trading.rs  pnl_tracker.rs  position_manager.rs  position_sizing.rs  safety.rs  signal_engine.rs  startup_validator.rs  strategy.rs  websocket_manager.rs
crates/bot/src/execution/: aave_client.rs  aggregator_client.rs  contracts.rs  mod.rs  tx_submitter.rs
crates/bot/src/types/: aave.rs  aggregator.rs  health.rs  market_data.rs  mempool.rs  mod.rs  pnl.rs  position.rs  signal.rs  timeframe.rs  wad_ray.rs
crates/mempool-decoder/: Cargo.toml
crates/mempool-decoder/src/: aggregator.rs  classifier.rs  config.rs  constants.rs  main.rs  poison.rs  price_cache.rs  publisher.rs  types.rs  websocket.rs
crates/mempool-decoder/src/decoder/: aggregator.rs  mod.rs  universal.rs  v2.rs  v3.rs
data/: bsc_event_streamer.py
execution/: __init__.py  aave_client.py  aggregator_client.py  tx_submitter.py
logging/: logger_manager.py
migrations/: 001_initial.sql
ml/: .dockerignore  .gitignore  DEPLOYMENT_CHECKLIST.md  Dockerfile  INTEGRATION_GUIDE.md  ML_PHASE_2_ANALYSIS.md  ML_PHASE_2_PROGRESS.md  ML_PHASE_2_TRAINING_COMPLETE.md  ML_TRAINING_STATUS.md  OPTION_A_CONTINUATION_GUIDE.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  docker-compose.yml  requirements.txt
ml/api/: __init__.py  main.py  models.py
ml/configs/: xgboost_baseline.yaml
ml/features/: __init__.py  feature_transformer.py  microstructure.py  technical_indicators.py  volatility.py
ml/gaf/: __init__.py  gaf_dataset.py  gaf_transformer.py
ml/models/: best_hyperparameters.yaml  ensemble.py  feature_importances.csv  feature_names.txt  feature_names_comprehensive.txt  feature_names_selected.txt  gaf_cnn.py  selected_features.yaml  selected_features_importance.csv  xgboost_comprehensive_v1_metadata.yaml  xgboost_ensemble_v1_metadata.yaml  xgboost_phase1_simple_metadata.yaml  xgboost_phase1_v1_metadata.yaml  xgboost_selected_features_v1_metadata.yaml
ml/monitoring/: prometheus.yml
ml/scripts/: backtest.py  download_data.py  feature_selection.py  feature_selection_rf.py  generate_gaf_efficient.py  generate_gaf_fixed.py  generate_gaf_images.py  generate_gaf_single.py  monitor_and_train.sh  optimize_hyperparameters.py  start_services.sh  train_all_sequential.sh  train_ensemble.py  train_gaf_cnn.py  train_gaf_cnn_onthefly.py  (+7 more)
scripts/: README.md  export_mcp_data.py  import_mcp_data.py  setup_timescaledb.py  test_chroma_connection.py  test_postgres_connection.py
shared/: constants.py  serialization_utils.py  types.py
tests/: conftest.py
(+15 files in other folders)
