[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "bsc-leverage-bot"
version = "0.1.0"
description = "BSC Aave V3 leverage position manager with DEX aggregator routing"
requires-python = ">=3.10,<3.12"
dependencies = [
    "web3>=6.12,<7",
    "aiohttp>=3.9,<4",
    "python-dotenv>=1.0,<2",
    "eth-abi>=4.2,<5",
    "eth-account>=0.10,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4,<9",
    "pytest-asyncio>=0.21,<1",
    "pytest-mock>=3.12,<4",
    "aioresponses>=0.7,<1",
    "mypy>=1.7,<2",
    "ruff>=0.1,<1",
    "black>=23.11,<25",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests that require network access or Anvil fork",
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]

[tool.black]
target-version = ["py310"]
line-length = 100
