[package]
name = "mempool-decoder"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mempool-decoder"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
alloy = { workspace = true }
redis = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
lru = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
